--- a/Legends.html
+++ b/Legends.html
@@ -10,7 +10,7 @@ Purpose : Template html5 web page-->
     <meta name="description" content="History of Barcelona Football Club">
     <meta name="keywords" content="Section, Article, Footer">
     <title>FC Barcelona</title>
-    <link rel="stylesheet" href="Styles/style.css">
+    <link rel="stylesheet" href="styles/Style.css">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
     <style>
         body {
