--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ Purpose : Template html5 web page-->
         <nav>
             <ul>
                 <li id="active"><a href="index.html">Home</a></li>
-                <li><a href="history.html">History</a></li>
+                <li><a href="History.html">History</a></li>
                 <li><a href="Achievments.html">Achievements</a></li>
                 <li><a href="Legends.html">Legends</a></li>
             </ul>
