--- a/History.html
+++ b/History.html
@@ -33,7 +33,7 @@ Purpose : Template html5 web page-->
         <nav>
             <ul> <!--Unordered List-->
                 <li id="active"><a href="index.html">Home</a></li>
-                <li><a href="history.html">History</a></li>
+                <li><a href="History.html">History</a></li>
                 <li><a href="Achievments.html">Achievments</a></li>
                 <li><a href="Legends.html">Legends</a></li>
             </ul>
