--- a/Legends.html
+++ b/Legends.html
@@ -26,7 +26,7 @@ Purpose : Template html5 web page-->
 </head>
 <body> <!--Body Tag Start of Body section display on screen-->
     <header>
-        <img style="float: left; margin-right: 10px;" src="Images/barca logo.png" alt="Barcelona Club Badge" width="90">
+        <img style="float: left; margin-right: 10px;" src="images/barca logo.png" alt="Barcelona Club Badge" width="90">
         <h1> Barcelona Club Info</h1>
         <nav>
             <ul> <!--Unordered List-->
