--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Purpose : Template html5 web page-->
 <body>
     <div class="project-info">This is a college project</div>
     <header>
-        <img style="margin-left: 10px;" src="Images/barca logo.png" alt="Barcelona Club Badge" width="90">
+        <img style="margin-left: 10px;" src="images/barca logo.png" alt="Barcelona Club Badge" width="90">
         <h1>Barcelona Club Info</h1>
         <nav>
             <ul>
